...
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/holo_blue_bright" />

        <LinearLayout
            android:id="@+id/access_profilestandard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openProfile"
            android:background="@drawable/button_background_selector" >
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profilestandard"
                    android:text="@string/preference_access_title_profile_standard"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/access_profilemyprofile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openProfile"
            android:background="@drawable/button_background_selector" >
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profilemyprofile"
                    android:text="@string/preference_access_title_profile_myprofile"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/holo_blue_bright" />

        <LinearLayout
            android:id="@+id/access_profile1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openProfile"
            android:background="@drawable/button_background_selector" >
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profile1"
                    android:text="@string/preference_access_title_profile_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/access_profile2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openProfile"
            android:background="@drawable/button_background_selector" >
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profile2"
                    android:text="@string/preference_access_title_profile_2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profile3"
                    android:text="@string/preference_access_title_profile_3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/access_profile4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:onClick="openProfile"
            android:background="@drawable/button_background_selector" >
...

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/access_title_profile4"
                    android:text="@string/preference_access_title_profile_4"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/list_item_thumbnail_border_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
...
